jVTLlib/src/it/islandofcode/parser/antlr/VTLParser.java
// Generated from VTL.g4 by ANTLR 4.6
package it.islandofcode.parser.antlr;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class VTLParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.6", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, ALONG=37, GROUP_BY=38, 
		ASSIGNMENT=39, MEMBERSHIP=40, CONCAT=41, EQ=42, NE=43, LE=44, LT=45, GE=46, 
		GT=47, AND=48, OR=49, XOR=50, NOT=51, ISNULL=52, ISNOTNULL=53, NATIVE_FUNCTIONS=54, 
		FUNC_ISNULL=55, FUNC_ROUND=56, FUNC_CEIL=57, FUNC_FLOOR=58, FUNC_ABS=59, 
		FUNC_TRUNC=60, FUNC_EXP=61, FUNC_LN=62, FUNC_LOG=63, FUNC_POWER=64, FUNC_SQRT=65, 
		FUNC_NROOT=66, FUNC_MOD=67, FUNC_LISTSUM=68, FUNC_LENGTH=69, FUNC_TRIM=70, 
		FUNC_LTRIM=71, FUNC_RTRIM=72, FUNC_UPPER=73, FUNC_LOWER=74, FUNC_SUBSTR=75, 
		FUNC_INSTR=76, FUNC_D_F_S=77, FUNC_I_F_S=78, FUNC_F_F_S=79, FUNC_S_F_N=80, 
		FUNC_REPLACE=81, INNER=82, OUTER=83, CROSS=84, ROLE=85, DATE_LITERAL=86, 
		INTEGER_LITERAL=87, BOOLEAN_LITERAL=88, STRING_LITERAL=89, FLOAT_LITERAL=90, 
		NULL=91, IMPLICIT=92, IDENTIFIER=93, MEASURE=94, ATTRIBUTE=95, REG_IDENTIFIER=96, 
		ESCAPED_IDENTIFIER=97, MUL=98, DIV=99, PLUS=100, MINUS=101, LPAR=102, 
		RPAR=103, COMMA=104, COLON=105, WS=106, COMMENT=107, LINE_COMMENT=108;
	public static final int
		RULE_start = 0, RULE_statement = 1, RULE_assignment = 2, RULE_functionCall = 3, 
		RULE_userFunctionCall = 4, RULE_nativeFunctionCall = 5, RULE_functionParameters = 6, 
		RULE_namedExpression = 7, RULE_expression = 8, RULE_membershipExpression = 9, 
		RULE_variable = 10, RULE_literal = 11, RULE_nullLiteral = 12, RULE_booleanLiteral = 13, 
		RULE_dateLiteral = 14, RULE_integerLiteral = 15, RULE_floatLiteral = 16, 
		RULE_stringLiteral = 17, RULE_datasetExpression = 18, RULE_hierarchyExpression = 19, 
		RULE_hierarchyReference = 20, RULE_function = 21, RULE_getFunction = 22, 
		RULE_putFunction = 23, RULE_aggregationFunction = 24, RULE_aggregationParams = 25, 
		RULE_checkFunction = 26, RULE_checkParam = 27, RULE_checkRows = 28, RULE_checkColumns = 29, 
		RULE_errorCode = 30, RULE_errorLevel = 31, RULE_variableExpression = 32, 
		RULE_clauseExpression = 33, RULE_clause = 34, RULE_renameParam = 35, RULE_filter = 36, 
		RULE_keep = 37, RULE_calc = 38, RULE_attrcalc = 39, RULE_aggregate = 40, 
		RULE_nvlFunction = 41, RULE_ifThenElseExpression = 42, RULE_ifBody = 43, 
		RULE_ifBodyExpression = 44, RULE_relationalExpression = 45, RULE_unionExpression = 46, 
		RULE_joinExpression = 47, RULE_joinDefinition = 48, RULE_joinBody = 49, 
		RULE_joinClause = 50, RULE_joinAssignment = 51, RULE_joinFoldExpression = 52, 
		RULE_joinUnfoldExpression = 53, RULE_joinDropExpression = 54, RULE_joinKeepExpression = 55, 
		RULE_joinRenameExpression = 56, RULE_joinRenameParameter = 57, RULE_joinFilterExpression = 58, 
		RULE_componentRole = 59;
	public static final String[] ruleNames = {
		"start", "statement", "assignment", "functionCall", "userFunctionCall", 
		"nativeFunctionCall", "functionParameters", "namedExpression", "expression", 
		"membershipExpression", "variable", "literal", "nullLiteral", "booleanLiteral", 
		"dateLiteral", "integerLiteral", "floatLiteral", "stringLiteral", "datasetExpression", 
		"hierarchyExpression", "hierarchyReference", "function", "getFunction", 
		"putFunction", "aggregationFunction", "aggregationParams", "checkFunction", 
		"checkParam", "checkRows", "checkColumns", "errorCode", "errorLevel", 
		"variableExpression", "clauseExpression", "clause", "renameParam", "filter", 
		"keep", "calc", "attrcalc", "aggregate", "nvlFunction", "ifThenElseExpression", 
		"ifBody", "ifBodyExpression", "relationalExpression", "unionExpression", 
		"joinExpression", "joinDefinition", "joinBody", "joinClause", "joinAssignment", 
		"joinFoldExpression", "joinUnfoldExpression", "joinDropExpression", "joinKeepExpression", 
		"joinRenameExpression", "joinRenameParameter", "joinFilterExpression", 
		"componentRole"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'hierarchy'", "'sum'", "'prod'", "'get'", "'put'", "'avg'", "'check'", 
		"'errorcode'", "'errorlevel'", "'not_valid'", "'valid'", "'all'", "'measures'", 
		"'condition'", "'['", "']'", "'rename'", "'as'", "'filter'", "'keep'", 
		"'calc'", "'attrcalc'", "'aggregate'", "'nvl'", "'if'", "'elseif'", "'else'", 
		"'then'", "'union'", "'{'", "'}'", "'on'", "'fold'", "'to'", "'unfold'", 
		"'drop'", "'along'", "'group by'", "':='", "'.'", "'||'", "'='", "'<>'", 
		"'<='", "'<'", "'>='", "'>'", "'and'", "'or'", "'xor'", "'not'", "'is null'", 
		"'is not null'", null, "'isnull'", "'round'", "'ceil'", "'floor'", "'abs'", 
		"'trunc'", "'exp'", "'ln'", "'log'", "'power'", "'sqrt'", "'nroot'", "'mod'", 
		"'listsum'", "'length'", "'trim'", "'ltrim'", "'rtrim'", "'upper'", "'lower'", 
		"'substr'", "'instr'", "'date_from_string'", "'integer_from_string'", 
		"'float_from_string'", "'string_from_number'", "'replace'", "'inner'", 
		"'outer'", "'cross'", "'role'", null, null, null, null, null, "'null'", 
		"'implicit'", null, null, null, null, null, "'*'", "'/'", "'+'", "'-'", 
		"'('", "')'", "','", "':'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, "ALONG", "GROUP_BY", "ASSIGNMENT", "MEMBERSHIP", "CONCAT", "EQ", 
		"NE", "LE", "LT", "GE", "GT", "AND", "OR", "XOR", "NOT", "ISNULL", "ISNOTNULL", 
		"NATIVE_FUNCTIONS", "FUNC_ISNULL", "FUNC_ROUND", "FUNC_CEIL", "FUNC_FLOOR", 
		"FUNC_ABS", "FUNC_TRUNC", "FUNC_EXP", "FUNC_LN", "FUNC_LOG", "FUNC_POWER", 
		"FUNC_SQRT", "FUNC_NROOT", "FUNC_MOD", "FUNC_LISTSUM", "FUNC_LENGTH", 
		"FUNC_TRIM", "FUNC_LTRIM", "FUNC_RTRIM", "FUNC_UPPER", "FUNC_LOWER", "FUNC_SUBSTR", 
		"FUNC_INSTR", "FUNC_D_F_S", "FUNC_I_F_S", "FUNC_F_F_S", "FUNC_S_F_N", 
		"FUNC_REPLACE", "INNER", "OUTER", "CROSS", "ROLE", "DATE_LITERAL", "INTEGER_LITERAL", 
		"BOOLEAN_LITERAL", "STRING_LITERAL", "FLOAT_LITERAL", "NULL", "IMPLICIT", 
		"IDENTIFIER", "MEASURE", "ATTRIBUTE", "REG_IDENTIFIER", "ESCAPED_IDENTIFIER", 
		"MUL", "DIV", "PLUS", "MINUS", "LPAR", "RPAR", "COMMA", "COLON", "WS", 
		"COMMENT", "LINE_COMMENT"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "VTL.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public VTLParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class StartContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(VTLParser.EOF, 0); }
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public StartContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_start; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof VTLListener ) ((VTLListener)listener).enterStart(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof VTLListener ) ((VTLListener)listener).exitStart(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof VTLVisitor ) return ((VTLVisitor<? extends T>)visitor).visitStart(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StartContext start() throws RecognitionException {
		StartContext _localctx = new StartContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_start);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(121); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(120);
				statement();
				}
				}
				setState(123); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==REG_IDENTIFIER || _la==ESCAPED_IDENTIFIER );
			setState(125);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementContext extends ParserRuleContext {
		public AssignmentContext assignment() {
			return getRuleContext(AssignmentContext.class,0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof VTLListener ) ((VTLListener)listener).enterStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof VTLListener ) ((VTLListener)listener).exitStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof VTLVisitor ) return ((VTLVisitor<? extends T>)visitor).visitStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_statement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(127);
			assignment();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AssignmentContext extends ParserRuleContext {
		public VariableContext variable() {
			return getRuleContext(VariableContext.class,0);
		}
		public TerminalNode ASSIGNMENT() { return getToken(VTLParser.ASSIGNMENT, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public DatasetExpressionContext datasetExpression() {
			return getRuleContext(DatasetExpressionContext.class,0);
		}
		public AssignmentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assignment; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof VTLListener ) ((VTLListener)listener).enterAssignment(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof VTLListener ) ((VTLListener)listener).exitAssignment(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof VTLVisitor ) return ((VTLVisitor<? extends T>)visitor).visitAssignment(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AssignmentContext assignment() throws RecognitionException {
		AssignmentContext _localctx = new AssignmentContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_assignment);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(129);
			variable();
			setState(130);
			match(ASSIGNMENT);
			setState(133);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				{
				setState(131);
				expression(0);
				}
				break;
			case 2:
				{
				setState(132);
				datasetExpression(0);
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FunctionCallContext extends ParserRuleContext {
		public NvlFunctionContext nvlFunction() {
			return getRuleContext(NvlFunctionContext.class,0);
		}
		public NativeFunctionCallContext nativeFunctionCall() {
			return getRuleContext(NativeFunctionCallContext.class,0);
		}
		public UserFunctionCallContext userFunctionCall() {
			return getRuleContext(UserFunctionCallContext.class,0);
		}
		public FunctionCallContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_functionCall; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof VTLListener ) ((VTLListener)listener).enterFunctionCall(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof VTLListener ) ((VTLListener)listener).exitFunctionCall(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof VTLVisitor ) return ((VTLVisitor<? extends T>)visitor).visitFunctionCall(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FunctionCallContext functionCall() throws RecognitionException {
		FunctionCallContext _localctx = new FunctionCallContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_functionCall);
		try {
			setState(138);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__23:
				enterOuterAlt(_localctx, 1);
				{
				setState(135);
				nvlFunction();
				}
				break;
			case NATIVE_FUNCTIONS:
				enterOuterAlt(_localctx, 2);
				{
				setState(136);
				nativeFunctionCall();
				}
				break;
			case REG_IDENTIFIER:
				enterOuterAlt(_localctx, 3);
				{
				setState(137);
				userFunctionCall();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class UserFunctionCallContext extends ParserRuleContext {
		public Token functionName;
		public TerminalNode LPAR() { return getToken(VTLParser.LPAR, 0); }
		public TerminalNode RPAR() { return getToken(VTLParser.RPAR, 0); }
		public TerminalNode REG_IDENTIFIER() { return getToken(VTLParser.REG_IDENTIFIER, 0); }
		public FunctionParametersContext functionParameters() {
			return getRuleContext(FunctionParametersContext.class,0);
		}
		public UserFunctionCallContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_userFunctionCall; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof VTLListener ) ((VTLListener)listener).enterUserFunctionCall(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof VTLListener ) ((VTLListener)listener).exitUserFunctionCall(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof VTLVisitor ) return ((VTLVisitor<? extends T>)visitor).visitUserFunctionCall(this);
			else return visitor.visitChildren(this);
		}
	}

	public final UserFunctionCallContext userFunctionCall() throws RecognitionException {
		UserFunctionCallContext _localctx = new UserFunctionCallContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_userFunctionCall);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(140);
			((UserFunctionCallContext)_localctx).functionName = match(REG_IDENTIFIER);
			setState(141);
			match(LPAR);
			setState(143);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__23) | (1L << T__24) | (1L << NOT) | (1L << NATIVE_FUNCTIONS))) != 0) || ((((_la - 86)) & ~0x3f) == 0 && ((1L << (_la - 86)) & ((1L << (DATE_LITERAL - 86)) | (1L << (INTEGER_LITERAL - 86)) | (1L << (BOOLEAN_LITERAL - 86)) | (1L << (STRING_LITERAL - 86)) | (1L << (FLOAT_LITERAL - 86)) | (1L << (NULL - 86)) | (1L << (REG_IDENTIFIER - 86)) | (1L << (ESCAPED_IDENTIFIER - 86)) | (1L << (PLUS - 86)) | (1L << (MINUS - 86)) | (1L << (LPAR - 86)))) != 0)) {
				{
				setState(142);
				functionParameters();
				}
			}

			setState(145);
			match(RPAR);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NativeFunctionCallContext extends ParserRuleContext {
		public Token functionName;
		public TerminalNode LPAR() { return getToken(VTLParser.LPAR, 0); }
		public TerminalNode RPAR() { return getToken(VTLParser.RPAR, 0); }
		public TerminalNode NATIVE_FUNCTIONS() { return getToken(VTLParser.NATIVE_FUNCTIONS, 0); }
		public FunctionParametersContext functionParameters() {
			return getRuleContext(FunctionParametersContext.class,0);
		}
		public NativeFunctionCallContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_nativeFunctionCall; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof VTLListener ) ((VTLListener)listener).enterNativeFunctionCall(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof VTLListener ) ((VTLListener)listener).exitNativeFunctionCall(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof VTLVisitor ) return ((VTLVisitor<? extends T>)visitor).visitNativeFunctionCall(this);
			else return visitor.visitChildren(this);
		}
	}

	public final NativeFunctionCallContext nativeFunctionCall() throws RecognitionException {
		NativeFunctionCallContext _localctx = new NativeFunctionCallContext(_ctx, getState());
